<resources>
    <string name="app_name">Template demo</string>
    <string name="title_menu">Меню</string>
    <string name="title_home">Главная</string>
    <string name="title_settings">Настройки</string>
    <string name="title_login">Вход</string>
    <string name="title_signup">Регистрация</string>

    <string name="try_again">Попробовать ещё раз</string>
    <string name="no_internet">Нет интернета</string>
    <string name="email">E-mail</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="name">Имя</string>
    <string name="logout">Выход</string>
    <string name="no_birthday">Выбрать дату рождения</string>

    <string name="action_login">Войти</string>
    <string name="action_signup">Зарегистрироваться?</string>

    <string name="settings_main">Основное</string>
    <string name="settings_other">Прочее</string>
    <string name="settings_theme">Тема</string>
    <string name="settings_theme_default">Системная тема</string>
    <string name="settings_theme_light">Светлая тема</string>
    <string name="settings_theme_dark">Темная тема</string>

    <string name="change_password">Изменить пароль</string>
    <string name="change_email">Изменить почту</string>
    <string name="change_name">Изменить имя</string>

    <string name="error_loading">Ошибка загрузки данных</string>
    <string name="error_base_message">Что-то пошло не так. Попробуйте ещё.</string>
    <string name="error_when_login">Не верный логин или пароль.</string>
    <string name="error_some_data_is_empty">Не все поля заполнены.</string>
    <string name="error_input_text_base">Это обязательное поле</string>
    <string name="error_password_are_not_same">Пароли не совпадают</string>

    <string name="dialog_exit_title">Выход из приложения</string>
    <string name="dialog_exit_subtitle">Вы действительно хотите выйти?</string>
    <string name="dialog_positive_button">Да</string>
    <string name="dialog_negative_button">Отмена</string>
    <string name="dialog_change_name">Изменить имя</string>
    <string name="dialog_change_email">Изменить email</string>

    <string name="message_data_successfully_updated">Данные успешно сохранены.</string>
    <string name="message_error_data_failed_updated">Не удалось сохранить изменения. Попробуйте ещё</string>
</resources>