<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/spacer_16">

    <com.template.basecomponents.view.ViewInputEditText
        android:id="@+id/signup_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacer_16"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.template.basecomponents.view.ViewInputEditText
        android:id="@+id/signup_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacer_16"
        android:layout_marginTop="@dimen/spacer_8"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email" />

    <TextView
        android:id="@+id/signup_data_picker"
        style="@style/secondaryText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_54h"
        android:layout_marginTop="@dimen/spacer_16"
        android:background="@drawable/bg_border_only"
        android:drawableEnd="@drawable/ic_arrow_right_24"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/spacer_16"
        android:layout_marginHorizontal="@dimen/spacer_16"
        android:text="@string/birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_name" />

    <com.template.basecomponents.view.ViewInputEditText
        android:id="@+id/signup_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacer_16"
        android:layout_marginTop="@dimen/spacer_8"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_data_picker" />

    <com.template.basecomponents.view.ViewInputEditText
        android:id="@+id/signup_repeat_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacer_16"
        android:layout_marginTop="@dimen/spacer_8"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_button"
        style="@style/mainButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacer_16"
        android:layout_marginTop="@dimen/spacer_16"
        android:text="@string/action_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_repeat_password" />

</androidx.constraintlayout.widget.ConstraintLayout>